--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,27 +1,22 @@
 .footer {
-    display: flex;
-    justify-content: space-between;  
-    align-items: center;             
-    padding: 0 0 24px;
-    background-color: #f3f3f3;       
-    color: black;                    
-    position: absolute;                
-    top: calc(100%);
-    width: 100%;                    
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f3f3f3;
+  color: black;
+  width: 100%; 
+  margin: 171px 0px 0px 0px;
+  padding-bottom: 24px;
+}
 
-  .footer__left {
-    text-align: left;
-    font-size: 14px;
-    padding-left: 20px;
-  }
-  
-  .footer__right {
-    text-align: right;
-    padding-right: 20px;
-    font-size: 14px;
-  }
-  
+.footer__left {
+  text-align: left;
+  padding-left: 20px;
+  font-size: 14px;
+}
 
- 
+.footer__right {
+  text-align: right;
+  padding-right: 20px;
+  font-size: 14px;
+}
