--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -1,14 +1,16 @@
 .modal__content_type_preview {
     padding: 0;
-    background: white;
+    background: none;
     display: flex;
     flex-direction: column; 
-    width: 100%; 
+    max-width: 100%;
     max-width: 498px; 
-    height: 80%; 
+    height: 100%;
     max-height: 610px; 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); 
     position: relative; 
+    border-radius: 16px;
+    justify-content: center;
   }
 
 .modal__close-btn_type_preview{
@@ -45,9 +47,27 @@
 .modal__caption {
   font-size: 18px;
   font-weight: bold;
+  margin: 20px 0 12px 0;
 }
+
 
 .modal__weather {
   font-size: 14px;
   font-weight: bold;
+  margin: 0;
+  padding-bottom: 15px;
+}
+
+.modal__delete-btn{
+  font-size: 18px;
+  font-weight: bold;
+  display: flex;
+  justify-content: right;
+  border-style: none;
+  background: none;
+  color: rgba(255,77,0,1);
+  padding: 0;
+  position: absolute;
+  right: 10px;
+  top: calc(100% - 75px);
 }
