--- a/src/components/ClothesSection/ClothesSection.css
+++ b/src/components/ClothesSection/ClothesSection.css
@@ -5,6 +5,17 @@
     gap: 20px;
 }
 
+.clothes-section__title{
+    font-weight: 700;
+}
+
+.clothes-section__button{
+    border-style: none;
+    font-weight: 700;
+    opacity: 0.5;
+    background-color: transparent;
+}
+
 
 @media (max-width: 1050px) {
     .clothes-section__items {
