--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -11,8 +11,8 @@
     justify-content: center;
     align-items: center;
     font-family: "Cabinet Grotesk";
-    opacity: 0; /* Start hidden */
-    transition: opacity 0.3s ease; /* Fade transition */
+    opacity: 0; 
+    transition: opacity 0.4s ease; 
 }
 
 .modal_opened{
