--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
 .page {
   background-color: #f3f3f3;
-  font-family: 'Cabinet Grotesk';
+  font-family: "Cabinet Grotesk";
   min-height: 100vh;
 }
 
