--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -1,33 +1,36 @@
-.card{
-    width: 323px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    border-radius: 50%;
+.card {
+  width: 323px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  border-radius: 50%;
+  object-fit: contain;
 }
 
-.card__name{
-    position: absolute;
-    top: 15px;
-    margin: 0;
-    font-weight: 700;
-    font-size: 20px;
-    background-color: white; 
-    padding: 5px 10px; 
-    color: grey; 
-    display: flex; 
-    border: none; 
-    height: 24px;
-    
-    width: 73px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 8px;
+.card__name {
+  position: absolute;
+  top: 15px;
+  margin: 0;
+  font-weight: 700;
+  font-size: 20px;
+  background-color: white;
+  padding: 5px 10px;
+  color: grey;
+  display: flex;
+  border: none;
+  height: 24px;
+
+  width: 73px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
 }
 
-.card__image{
-    width: 100%;
-    border-radius: 10px;
-    border: .5px solid rgba(0, 0, 0, 0.3);
-    
+.card__image {
+  width: 323px;
+  height: 326px;
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 10px;
+  border: 0.5px solid rgba(0, 0, 0, 0.3);
 }
