--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -1,42 +1,43 @@
 .modal__content_type_preview {
-    padding: 0;
-    background: none;
-    display: flex;
-    flex-direction: column; 
-    max-width: 100%;
-    max-width: 498px; 
-    height: 100%;
-    max-height: 610px; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); 
-    position: relative; 
-    border-radius: 16px;
-    justify-content: center;
-  }
-
-.modal__close-btn_type_preview{
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    background: url('../../assets/CloseLight.svg') no-repeat center;
-    background-size: contain; 
-    background-color: transparent;
-    border: none;
-    width: 30px;              
-    height: 30px;             
-    cursor: pointer;
-    padding: 0;
+  padding: 0;
+  background: none;
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  max-width: 498px;
+  height: 100%;
+  max-height: 610px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  position: relative;
+  border-radius: 16px;
+  justify-content: center;
 }
 
+.modal__close-btn_type_preview {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background: url("../../assets/CloseLight.svg") no-repeat center;
+  background-size: contain;
+  background-color: transparent;
+  border: none;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  padding: 0;
+}
 
 .modal__image {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  width: 498px;
+  height: 610px;
+  height: 80vh;
   border-radius: 16px 16px 0 0;
-  object-fit: cover; 
+  object-fit: cover;
 }
 
 .modal__footer {
-  background: white; 
+  background: white;
   padding: 10px;
   border-radius: 0 0 16px 16px;
   display: flex;
@@ -50,7 +51,6 @@
   margin: 20px 0 12px 0;
 }
 
-
 .modal__weather {
   font-size: 14px;
   font-weight: bold;
@@ -58,14 +58,14 @@
   padding-bottom: 15px;
 }
 
-.modal__delete-btn{
+.modal__delete-btn {
   font-size: 18px;
   font-weight: bold;
   display: flex;
   justify-content: right;
   border-style: none;
   background: none;
-  color: rgba(255,77,0,1);
+  color: rgba(255, 77, 0, 1);
   padding: 0;
   position: absolute;
   right: 10px;
