--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -1,112 +1,110 @@
-.modal{
-    visibility: hidden;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #0000004d;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Cabinet Grotesk";
-    opacity: 0; 
-    transition: opacity 0.4s ease; 
+.modal {
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #0000004d;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Cabinet Grotesk";
+  opacity: 0;
+  transition: opacity 0.4s ease;
 }
 
-.modal_opened{
-    opacity: 1;
-    visibility: visible;
+.modal_opened {
+  opacity: 1;
+  visibility: visible;
 }
 
-.modal__title{
-    margin: 0 0 24px 0;
-    font-size: 16px;
+.modal__title {
+  margin: 0 0 24px 0;
+  font-size: 16px;
 }
 
-.modal__submit{
-    display: flex;
-    width: 124px;
-    height: 36px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 4px;
-    border-style: none;
-    background-color: black;
-    color: white;
-    margin-top: 22px;
+.modal__submit {
+  display: flex;
+  width: 124px;
+  height: 36px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  border-style: none;
+  background-color: black;
+  color: white;
+  margin-top: 22px;
 }
 
-.modal__submit_disabled{
-    opacity: 0.5;
+.modal__submit_disabled {
+  opacity: 0.5;
 }
 
-.modal__close-btn{
-    position: absolute;
-    top: 20px;
-    right: 28px;
-    background: url('../../assets/Closebutton.svg') no-repeat center;
-    background-size: contain; 
-    background-color: transparent;
-    border: none;
-    width: 30px;              
-    height: 30px;             
-    cursor: pointer;
-    padding: 0;
+.modal__close-btn {
+  position: absolute;
+  top: 20px;
+  right: 28px;
+  background: url("../../assets/Closebutton.svg") no-repeat center;
+  background-size: contain;
+  background-color: transparent;
+  border: none;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  padding: 0;
 }
 
-.modal__content{
-    margin: 193px 472px;
-    background-color: white;
-    position: relative;
-    padding: 28px 28px 36px;
-    max-width: 496px;
-    max-height: 436px;
-    width: 100%;
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); 
+.modal__content {
+  margin: 193px 472px;
+  background-color: white;
+  position: relative;
+  padding: 28px 28px 36px;
+  max-width: 496px;
+  max-height: 436px;
+  width: 100%;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.modal__form{
-    display: flex;
-    flex-direction: column;
+.modal__form {
+  display: flex;
+  flex-direction: column;
 }
 
-.modal__input{
-    display: block;
-    margin: 20px 0 10px;
-    width: 100%;
-    padding: 0;
-    max-width: 440px;
+.modal__input {
+  display: block;
+  margin: 20px 0 10px;
+  width: 100%;
+  padding: 0;
+  max-width: 440px;
 }
 
-.modal__input_type_radio{
-    margin: 10px 0;
+.modal__input_type_radio {
+  margin: 10px 0;
 }
 
-.modal__input-underline{
-    border: none;             
-    border-bottom: 1px solid black;  
-    background: transparent;   
-    outline: none;             
-   
+.modal__input-underline {
+  border: none;
+  border-bottom: 1px solid black;
+  background: transparent;
+  outline: none;
 }
 
-.modal__legend{
-    font-weight: 700;
+.modal__legend {
+  font-weight: 700;
 }
 
-.modal__radio-buttons{
-    max-width: 173px;
-    width: 100%;
-    border-style: none;
-    margin: 0;
-    padding: 0;
+.modal__radio-buttons {
+  max-width: 173px;
+  width: 100%;
+  border-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-.modal__label{
-    margin-bottom: 8px;
-    font-weight: 700;
+.modal__label {
+  margin-bottom: 8px;
+  font-weight: 700;
 }
-
