--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -59,6 +59,15 @@
   font-weight: 700;
 }
 
+.header__edit-profile-btn {
+  border-style: none;
+  text-decoration: none;
+  font-weight: 700;
+  padding: 0;
+  margin: 0;
+  margin-right: 10px;
+}
+
 
 .user-info {
   display: flex;
