--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -26,6 +26,36 @@
   border-radius: 8px;
 }
 
+.card__like-btn {
+  background-image: url("../../assets/heart.svg");
+  background-repeat: no-repeat;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  margin: 12px 0 0;
+  border: none;
+  opacity: 0.4;
+  cursor: pointer;
+  z-index: 1;
+  position: absolute;
+  top: 10px;
+  right: 65px;
+}
+
+.card__like-btn:hover {
+  opacity: 1;
+}
+
+.card__like-btn_liked {
+  background-image: url("../../assets/Liked.svg");
+  opacity: 1;
+}
+
+.card__like-btn_liked:hover {
+  opacity: 0.5;
+}
+
+
 .card__image {
   width: 323px;
   height: 326px;
