--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -64,6 +64,7 @@
   position: relative;
   padding: 28px 28px 36px;
   max-width: 496px;
+  min-width: 320px;
   max-height: 400px;
   width: 100%;
   border-radius: 20px;
